# myte

./: .gitignore  .ocamlformat  CNAME  LICENSE  README.md  dune  dune-project  myte.opam
.github/workflows/: ci.yml  test.yml
docs/todo/: TODO  bind_inner_variant.myte  failing-type-bound-cycles.myte  implicit-traits-subtyping.myte  match-unreachable-2.myte  match-unreachable-false-positives.myte
examples/: bf.myte  cat.myte  cp.myte  fibonacci.mt  fibonacci.myte  imports.mt  let-poly-error.mt  list.mt  mutual-recursion.mt  scopes.mt
lib/runtime/: aarch64-linux-runtime.c  alloc.c  (+10 more)
myteo/: .ocamlformat  TODO  fib.out
mytepp/: .clang-format
myter/: Cargo.toml
playground/: Dockerfile  OneDark-Pro.json  README.md  babel.config.js  index.html  package-lock.json  package-server.sh  package.json  server.js  webpack.config.js
scripts/: build  build_boehm_gc  build_runtime  build_self_hosted  cross_env  debug  format  install  myte  playground-binary  run  run_tests  setup_myte_env  xctrace
self/: main.myte
spec/: examples.mt  grammar.md  tasks.md
src/: MT.kt  dune  myte.ml
stdlib/: bool.mt  bool.myte  byte.mt  byte.myte  compare.mt  dll.mt  double.mt  float.mt  fmt.mt  function.mt  hash.myte  int.mt  int.myte  io.mt  io.myte  iterator.mt  list.mt  long.myte  map.mt  map.myte  memory.myte  never.myte  ops.mt  option.mt  option.myte  result.myte  set.mt  set.myte  string.mt  string.myte  sys.myte  test.myte  tuple.mt  unit.mt  unit.myte  vec.mt  vec.myte
stdlib-map-error/: compare.mt  vec.mt
test/: dune  run_tests.ml
todo/: failing-type-bound-cycles.myte
(+2742 files in other folders)
